--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".BMIActiviy"></activity>
+        <activity android:name=".MainActivity2" />
         <activity android:name=".ListMainActivity" />
         <activity android:name=".ResultActivity2" />
         <activity android:name=".MainActivity">
